@@ -65,9 +65,7 @@ private:
 	AstNode* timesp = nodep->exprsp(); if (timesp) timesp->unlinkFrBack();
 	timesp = timesp->addNext(new AstTime(nodep->fileline()));
 	nodep->exprsp(timesp);
-	if (!nodep->scopeNamep()
-	    && (nodep->name().find("%m") != string::npos
-		|| nodep->name().find("%M") != string::npos)) {
+	if (!nodep->scopeNamep() && nodep->formatScopeTracking()) {
 	    nodep->scopeNamep(new AstScopeName(nodep->fileline()));
 	}
     }
